# BVH-software-raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  git-credential-manager
include/: BVH.h  defines.h  muGraphics.h  ray.h  renderer.h  rng.h  triangle.h  vec3.h
src/: main.c  ray.c  renderer.c  rng.c  vec3.c
